Crea tokens y los filtra